2010-12-09 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
	
	* InterfaceOutput.cxx, InterfaceOutput.h: indices are now int
	* tag KLFitter-00-03-34

2010-12-08 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
	
	* InterfaceD3PD.cxx, Particles.h: pT order for objects and bugfix
	* tag KLFitter-00-03-33

2010-11-30 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* Minor change for minuit status codes
	* tag KLFitter-00-03-32

2010-11-30 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* Fix compiler warnings.
	* tag KLFitter-00-03-31

2010-11-30 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* Fix bug in muon TF.
	* Replace TF warnings by StatusCode 510.
	* tag KLFitter-00-03-30

2010-11-22 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* ResDoubleGauss classes : check for the TF parameters -> only warning if sigma < 0
	* tag KLFitter-00-03-19

2010-11-18 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* fix in Fitter.cxx for (non-used) b-tagging weighting method
	* tag KLFitter-00-03-18

2010-11-18 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* runKLFitter.c : clean up flags
	* tag KLFitter-00-03-17

2010-11-18 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* Refining comments.
	* tag KLFitter-00-03-16

2010-11-18 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* ResDoubleGauss classes : implement a check for the TF parameters
	* tag KLFitter-00-03-15

2010-11-17 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* DetectorBase : fix compiler warning for unused variable
	* tag KLFitter-00-03-14

2010-11-09 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
	
	* minor changes in InterfaceD3PD.cxx, InterfaceD3PD.h: overload ConnectTree
	* tag KLFitter-00-03-13

2010-11-08 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
	
	* bugfix in InterfaceD3PD.cxx, InterfaceD3PD.h: MC weight
	* tag KLFitter-00-03-12

2010-11-03 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
	