@@ -11,7 +11,7 @@ FlagIs7TeV = true
 FlagIs10TeV = false
 MassTop = 172.5
 PathToOutputFile = output.root
-PathToInputFile = input.root
+PathToInputFile = input.txt
 IsBkg = false
 FlagTruthSel = false
 FlagAthenaComp = false
