@@ -17,7 +17,7 @@
 // --------------------------------------------------------- 
 
 #include "InterfaceRoot.h" 
-
+#include <TChain.h>
 // --------------------------------------------------------- 
 
 class TTree;
@@ -92,15 +92,30 @@ namespace KLFitter
      * @param opt Options.
      * @return An error code.
      */ 
-    int OpenRootFile(const char * filename, Option_t * opt = "READ"); 
-
+    int OpenRootFile(const char * filename, Option_t * opt = "READ");
+     
+    /**
+     * Open Root files containing trees.
+     * @param filenames vector containing the filenames. 
+     * @param opt Options.
+     * @return An error code.
+     */ 
+    int OpenRootFiles(std::vector<std::string> filenames, Option_t * opt = "READ");	
+    
     /**
      * Get a tree from Root file and set branch addresses. 
      * @param treename The name of the tree.
      * @return An error code. 
      */ 
     int ConnectTree(const char * treename); 
-
+    
+    /**
+     * Set branch addresses for a given Chain directly, skip OpenRootFile. 
+     * @param fChain The name of the Chain.
+     * @return An error code. 
+     */ 
+    int ConnectChain(TChain * fChain); 
+    
     /**
      * Get event from Root tree. 
      * @param index The event index.
@@ -124,7 +139,10 @@ namespace KLFitter
      * The Root tree. 
      */ 
     TTree * fTree; 
-                
+     /**
+     * The Root chain. 
+     */      
+    TChain * fChain;               
     /** \name Tree variables  */
     /* @{ */
 
